# tip-lnk

./: .env.example  .gitignore  .replit  CIVMEN_REPORT.md  DX-REPORT.md  INTEGRATION_ALIGNMENT.md  MOBILE_SPEC.md  PHASE2_ELITE.md  README.md  TIPLNK_AGENT_PROMPT.md  TIPLNK_HUMAN_DIRECTIVES.md  analyze_request.json  api-client-deep.test.js  audit.txt  brutal_test.ts  brutal_test_suite.ts  build-vite.mjs  check_admin.js  check_client.ts  download_solana.cjs  download_solana_bypass.js  index.html  index.ts  install_solana.ps1  install_solana2.bat  package-lock.json  package.json  pnpm-lock.yaml  refactor_imports.cjs  replit.md  search_archives.json  search_archives_tiplink.json  search_birdeye_dflow.json  search_integrations.json  search_kamino_creator.json  search_mobot.json  search_projects.json  search_tiplink.json  seed_admin.ts  skills-lock.json  (+9 more)
.migration-backup/: DX-REPORT.md  README.md  auth-circuit-breaker.test.js  backend-logic-deep.test.js  backend-logic-verify.js  backend-test-setup.js  index.html  verify-db-state.js  vite.config.js
api/: _cors.ts  _ratelimit.ts  index.ts  local-server.ts  tsconfig.json
attached_assets/: Pasted-09-30-24-339-artifacts-api-server-typecheck-src-handler_1778661134658.txt
backend/: app.ts  check-wallet.ts  email-test.ts  live-mail-test.ts  package-lock.json  package.json  provision-admin.ts  server.ts  set-admin-password.ts  sync-test.ts  test.ts  test_import.ts
plans/: dynamic-integration-arch.md  onboarding-redesign.md
src/: App.jsx  (+4 more)
tiplnk_anchor/programs/tiplnk/: Cargo.toml
tiplnk_anchor/programs/tiplnk/src/: lib.rs
(+559 files in other folders)
