[package]
name = "tiplnk"
version = "0.1.0"
description = "Get tips and donation doing what you love"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tiplnk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
